# antigravity-obsidian-exporter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_tests.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
agy_exporter/: __init__.py  __main__.py  config.py  models.py
agy_exporter/analysis/: intelligence.py  relations.py  wikilinks.py
agy_exporter/render/: __init__.py  conversation.py  mermaid.py
agy_exporter/sources/: __init__.py  annotations.py  chatgpt.py  claude_ai.py  ollama.py  pb_summaries.py  sqlite_db.py  transcript.py
agy_exporter/sync/: __init__.py  engine.py  state.py  watcher.py
convovault/: __init__.py
convovault/analysis/: __init__.py  intelligence.py  relations.py  wikilinks.py
convovault/cli/: __init__.py  main.py
convovault/config/: __init__.py  exporter.py
convovault/exporter/: __init__.py  engine.py
convovault/indexing/: __init__.py  index.py
convovault/models/: __init__.py  conversation.py
convovault/providers/: __init__.py  base.py  plugin_loader.py
convovault/providers/antigravity/: __init__.py  annotations.py  pb_summaries.py  provider.py  sqlite_db.py  transcript.py
convovault/providers/chatgpt/: __init__.py  chatgpt.py  provider.py
convovault/providers/claude/: __init__.py  provider.py
convovault/providers/gemini/: __init__.py  provider.py
convovault/providers/librechat/: __init__.py  provider.py
convovault/providers/ollama/: __init__.py  ollama.py  provider.py
convovault/providers/openwebui/: __init__.py  provider.py
convovault/rendering/: __init__.py  conversation.py  mermaid.py
convovault/state/: __init__.py  state.py
convovault/utils/: __init__.py  content.py
convovault/watcher/: __init__.py  watcher.py
examples/: example_config.py  sample_export.md
tests/: __init__.py  test_intelligence.py  test_markdown.py  test_pb_decoder.py  test_relations.py  test_transcript.py  test_wikilinks.py
