[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agy_exporter"
version = "2.0.0"
description = "Sync Google Antigravity conversations to an Obsidian vault with timeline/tag indexes."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Exporter Contributors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
watch = [
    "watchdog>=3.0.0"
]
test = [
    "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/contributor/agy_exporter"

[project.scripts]
agy-exporter = "agy_exporter.__main__:main"
