[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "convovault"
version = "2.1.0"
description = "Universal AI conversation knowledge vault — archive, sync, search, and graph your AI chats in Obsidian."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "AWAIS ALI RAFAQAT HUSSAIN", email = "owrew@users.noreply.github.com" }
]
keywords = [
    "ai", "conversations", "obsidian", "knowledge-base",
    "chatgpt", "claude", "antigravity", "gemini", "llm", "export",
    "markdown", "zettelkasten", "pkm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
watch = ["watchdog>=3.0"]
dev = [
    "flake8>=7.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/owrew/antigravity-obsidian-exporter"
Repository = "https://github.com/owrew/antigravity-obsidian-exporter"
"Bug Tracker" = "https://github.com/owrew/antigravity-obsidian-exporter/issues"
Changelog = "https://github.com/owrew/antigravity-obsidian-exporter/blob/main/CHANGELOG.md"

[project.scripts]
convovault = "convovault.cli.main:main"
agy-exporter = "agy_exporter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["convovault*", "agy_exporter*"]

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503", "E203"]
exclude = ["__pycache__", ".git", ".venv", "build", "dist"]
